Closed Bug 1561346 Opened 5 years ago Closed 5 years ago

FUZZING_INTERFACE_STREAM macro cannot be used multiple times in same file

Categories

(Firefox Build System :: General, defect)

defect
Not set
normal

Tracking

(firefox69 fixed)

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: decoder, Assigned: decoder)

References

Details

Attachments

(1 file)

The FUZZING_INTERFACE_STREAM macro expands to code that includes a __attribute__((constructor)) called LibFuzzerRegister to register the given fuzzing module at init time. However, because this name does not include the module name to make it unique, using the macro multiple times in the same compilation unit fails. We can fix this easily by giving the constructor a unique name based on the fuzzing module.

Blocks: 1561347
Pushed by choller@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d9fc649ed200
Allow FUZZING_INTERFACE_STREAM to be used multiple times. r=froydnj
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: