Bug 1561346 - Allow FUZZING_INTERFACE_STREAM to be used multiple times. r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D35824